# xnacpp

./: .gitignore  CMakeLists.txt
XnaCpp/: BoundingBox.cpp  BoundingBox.hpp  BoundingFrustum.cpp  BoundingFrustum.hpp  BoundingSphere.cpp  BoundingSphere.hpp  CMakeLists.txt  Color.cpp  Color.hpp  ContainmentType.cpp  ContainmentType.hpp  ContentManager.hpp  Curve.cpp  Curve.hpp  CurveContinuity.cpp  CurveContinuity.hpp  CurveKey.cpp  CurveKey.hpp  CurveKeyCollection.cpp  CurveKeyCollection.hpp  CurveLoopType.cpp  CurveLoopType.hpp  CurveTangent.cpp  CurveTangent.hpp  Game.cpp  Game.hpp  GamePlatform.cpp  GamePlatform.hpp  GameRunBehavior.cpp  GameRunBehavior.hpp  GameServiceContainer.cpp  GameServiceContainer.hpp  GameTime.cpp  GameTime.hpp  GameWindow.cpp  GameWindow.hpp  GraphicsDeviceInformation.cpp  GraphicsDeviceInformation.hpp  GraphicsDeviceManager.cpp  GraphicsDeviceManager.hpp  (+33 more)
XnaCpp/CSharp/: Nullable.cpp  Nullable.hpp  TimeSpan.cpp  TimeSpan.hpp
XnaCpp/Content/: ContentManager.cpp  ContentManager.hpp  ContentReader.cpp  ContentReader.hpp  ContentTypeReader.cpp  ContentTypeReader.hpp  ContentTypeReaderManager.cpp  ContentTypeReaderManager.hpp
XnaCpp/Graphics/: GraphicsAdapter.cpp  GraphicsAdapter.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsProfile.cpp  GraphicsProfile.hpp  GraphicsResource.cpp  GraphicsResource.hpp  IGraphicsDeviceService.cpp  IGraphicsDeviceService.hpp  PresentationParameters.cpp  PresentationParameters.hpp  SurfaceFormat.hpp  SuurfaceFormat.cpp
XnaCpp/Graphics/States/: DepthFormat.cpp  DepthFormat.hpp
XnaCpp/Platform/SDL/: SdlGamePlatform.cpp  SdlGamePlatform.hpp  SdlGameWindow.cpp  SdlGameWindow.hpp
XnaCpp/Platform/Windows/: WinFormsGameWindow.hpp
_monogame/MonoGame-develop-3.8.1.303/Documentation/: docfx.json
_monogame/MonoGame-develop-3.8.1.303/Documentation/articles/: toc.yml
_monogame/MonoGame-develop-3.8.1.303/Documentation/articles/getting_started/: toc.yml
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework/: Game.cs  MonoGame.Framework.Android.targets  MonoGame.Framework.iOS.targets
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework.Content.Pipeline/Processors/: FontDescriptionProcessor.cs
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework/Audio/: SoundEffectInstancePool.cs
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework/Input/: GamePadState.cs
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework/Input/Touch/: GestureType.cs
_monogame/MonoGame-develop-3.8.1.303/MonoGame.Framework/Platform/Android/: MonoGameAndroidGameView.cs
_monogame/MonoGame-develop-3.8.1.303/Templates/MonoGame.Templates.CSharp/content/MonoGame.Application.WindowsDX.CSharp/.template.config/: template.json
_monogame/MonoGame-develop-3.8.1.303/Templates/MonoGame.Templates.VSMacExtension/: MonoGame.Templates.VSMacExtension.csproj
